max-height and avoid page break inside pages

--- a/resume.css
+++ b/resume.css
@@ -93,7 +93,7 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     max-width: var(--page-width);
-    min-height: var(--page-height);
+    max-height: var(--page-height);
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: max-content max-content auto auto;
@@ -103,6 +103,7 @@ a:hover {
         "left right"
         "footer footer";
     grid-gap: 0.5em;
+    page-break-inside: avoid;
 }
 
 .card {
